   Patch: Johannes Hofmann
+- Added the "middle_click_drags_page" dillorc option.
   Patch: Jorge Arellano Cid, Thomas Orgis
+- Set the File menu label to hide when the File menu-button is shown.
 ? Trying a new iconv() test in configure.in.
 - Allowed the rc parser to skip whitespace around the equal sign.
 - Fixed the parser not to call Html_tag_close_* functions twice.
   Patches: Jorge Arellano Cid

dw

+- Moved clicked from ButtonResource to Resource.
   Patch: place (AKA corvid)
+- Cleaned up unused code in fltkviewbase.
   Patch: Johannes Hofmann

-----------------------------------------------------------------------------

dillo-2.0

+- Ported Dillo from GTK1 to FLTK2.
 - Ported a susbstantial part of the code from C to C++ (FLTK2 is in C++).
 - Wrote a new library: Dlib. With "Dlib" Dillo doesn't need glib anymore.
 - Ported all the code to Dlib.
 - Fixed Http_must_use_proxy() to be case insensitive.
 - Fixed some leaks and bugs in the cookies dpi.
 - Made Dillo's UI Control Panel resizable on-the-fly.
 - Implemented a new, simpler, dillorc parser.
 - Added handling of "localhost" in file URIs.
 - Fix: recognize "http://foo" and "http://foo/" as the same URL (BUG#497).
 - Reimplemented the Concomitant Callback chains into a uniform scheme!
   (two query branches and a single answer branch). It simplifies a lot the
   former CCC paths and allows for easier error control.
 - Added a new method for internally-generated urls: a_Cache_entry_inject().
 - Switched the cache to use Dlib's Dstr for its data storage.
 - Removed threads from IO. Now it only uses select-based watches.
 - Reimplemented IO.c and dpi.c to use Dlib's Dstr as its main buffer.
 - Turned Klist into a sorted list.
 - Removed one data-copy stage in Html_write_raw().
 - Switched gcc's "fmt..." syntax to ISO C __VA_ARGS__.
 - Fixed Dillo and its dpis to work from "/tmp" (for easy device unmount).
 - Simplified http.c by reusing the new non-blocking writes in IO.